# DeFiVulnLabsCosmWasm

./: NOTICE  README.md
contracts/access/: Cargo.toml
contracts/access/src/: contract.rs  msg.rs
contracts/access/tests/: access_control.rs
contracts/default_values/: Cargo.toml  README.md
contracts/default_values/examples/: schema.rs
contracts/default_values/src/: contract.rs  msg.rs
contracts/default_values/tests/: default_values.rs
contracts/normalization/: Cargo.toml
contracts/normalization/src/: contract.rs  error.rs  msg.rs  state.rs
contracts/normalization/tests/: normalize.rs
contracts/receive/: Cargo.toml  README.md
contracts/receive/examples/: schema.rs
contracts/receive/src/: contract.rs  msg.rs  state.rs
contracts/receive/tests/: receive.rs
contracts/surplus_assets/: Cargo.toml
contracts/surplus_assets/examples/: schema.rs
contracts/surplus_assets/src/: contract.rs  contract_mock.rs  lib.rs  msg.rs  state.rs
contracts/surplus_assets/tests/: surplus_assets.rs
contracts/unhandled/: Cargo.toml
contracts/unhandled/examples/: schema.rs
contracts/unhandled/src/: contract.rs  msg.rs  state.rs
contracts/unhandled/tests/: unhandled_function.rs
contracts/uninitialized_data/: Cargo.toml
contracts/uninitialized_data/src/: contract.rs  lib.rs  msg.rs  state.rs
contracts/uninitialized_data/tests/: uninitailized_data.rs
contracts/unwrap_or/src/: assets.rs  contract.rs  error.rs  msg.rs  state.rs
contracts/unwrap_or/tests/: unwrap_or.rs
contracts/vault/: Cargo.toml  README.md
contracts/vault/examples/: schema.rs
(+8 files in other folders)
