[package]
name = "cw-receive"
version = "0.11.0"
authors = ["Michal Bazyli <punishell@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Simple CosmWasm contract for an address validation testing"
repository = "https://github.com/punishell/DeFiVulnLabsCosmWasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.8
"""

[dependencies]
cw-utils = "0.13.4"
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.1.0"
cw-storage-plus = "0.13.4"
cosmwasm-schema = "1.1.0"
cw2 = "0.13.4"
cw20 = "0.13.4"
thiserror = "1.0.31"
cw-multi-test = { version = "0.14.0"}
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-vm = "1.1.0"
